objects/Mobile__c.object
<CustomObject>
    <fields>
        <fullName>MobileDescription__c</fullName>
        <label>MobileDescription</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Cost__c</fullName>
        <label>Mobile Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Features__c</fullName>
        <label>Mobile Count Using</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mobile Order Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>Mobile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mobile Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobiles</pluralLabel>
    <recordTypes>
        <fullName>MobileRecord1</fullName>
        <active>true</active>
        <label>MobileRecord1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>MobileSharingReason1__c</fullName>
        <label>MobileSharingReason1</label>
    </sharingReasons>
</CustomObject>